django_project/myblog-loadbalancing-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: myblog
  name: myblog
spec:
  ports:
    - nodePort: 30945
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: myblog
  type: LoadBalancer
