django_project/myblog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myblog
spec:
  ports:
    - nodePort: 31280
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: myblog
  type: NodePort
