django_project/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myblog
  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: myblog.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myblog
                port:
                  number: 8000
